--- a/src/cmd/awk/Makefile
+++ b/src/cmd/awk/Makefile
@@ -5,7 +5,7 @@ CFLAGS		+= -Werror -Os
 
 YACC            = bison -y
 YFLAGS          = -d
-LIBS            = -lm -lc
+LIBS            = -lm -lc -lclang
 FILES           = awk.lx.o b.o main.o tran.o lib.o run.o parse.o proctab.o freeze.o
 SOURCE          = awk.def.h awk.g.y awk.lx.l b.c lib.c main.c parse.c \
                   proc.c freeze.c run.c tran.c
