--- a/src/libclang/Makefile
+++ b/src/libclang/Makefile
@@ -8,14 +8,19 @@ OBJS            = adddf3.o \
                   divdf3.o \
                   divsf3.o \
                   comparedf2.o \
+                  comparesf2.o \
                   extendsfdf2.o \
                   fixdfsi.o \
+                  fixsfsi.o \
                   floatsidf.o \
                   floatsisf.o \
+                  floatunsisf.o \
                   fp_mode.o \
                   muldf3.o \
                   mulsf3.o \
-                  subsf3.o
+                  subdf3.o \
+                  subsf3.o \
+                  truncdfsf2.o
 
 all:            ../libclang.a
 
