Update kernel makefiles.

--- a/sys/pic32/Makefile.kconf
+++ b/sys/pic32/Makefile.kconf
@@ -3,19 +3,19 @@
 #
 # DEBUG is set to -g by kconfig if debugging is requested (kconfig -g).
 #
-include ../gcc-config.mk
+include ../clang-config.mk
 
-AS              = $(LLVMBIN)/clang -target mipsel -mcpu=mips32r2 ${DEBUG}
+AS              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 ${DEBUG}
 CC              =  -mabi=o32 -mfloat-abi=soft \
                   -nostdinc -fshort-double -fomit-frame-pointer -finline-hint-functions -I$(TOPSRC)/include
-CC              = $(LLVMBIN)/clang -target mipsel -mcpu=mips32r2 -mabi=o32 -mfloat-abi=soft \
+CC              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 -mabi=o32 -mfloat-abi=soft \
                   ${DEBUG} -nostdinc -fno-builtin -Werror -Wall
-CPP             = $(LLVMBIN)/clang-cpp
+CPP             = $(LLVMBIN)clang-cpp
 LD              = /usr/lib/llvm-12/bin/ld.lld -m elf32ltsmip
 LDFLAGS         = -nostdlib -T ../${LDSCRIPT} -Wl,-Map=$(basename $@).map
-SIZE            = $(LLVMBIN)/llvm-size
-OBJCOPY         = $(LLVMBIN)/llvm-objcopy
-OBJDUMP         = $(LLVMBIN)/llvm-objdump
+SIZE            = $(LLVMBIN)llvm-size
+OBJCOPY         = $(LLVMBIN)llvm-objcopy
+OBJDUMP         = $(LLVMBIN)llvm-objdump
 
 # sources are located via $S relative to the compilation directory
 S               = ../..
