Move libclang into libc. Catch all warnings.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,7 @@ include $(TOPSRC)/target.mk
 # Programs that live in subdirectories, and have makefiles of their own.
 #
 SUBDIR		= startup-$(MACHINE) libc libm libutil libtermlib libcurses \
-                  libvmf libwiznet libreadline libgpanel share cmd games man \
-                  libclang
+                  libvmf libwiznet libreadline libgpanel share cmd games man
 
 all:		$(SUBDIR)
 
