--- a/src/cmd/picoc/Makefile
+++ b/src/cmd/picoc/Makefile
@@ -4,7 +4,8 @@ include $(TOPSRC)/target.mk
 #CC=gcc
 CFLAGS          += -g -DUNIX_HOST -DVER='"1.0"' -DFILENAME_MAX=64 \
                    -DL_tmpnam=30 -DCLOCKS_PER_SEC=80000000 -DPATH_MAX=200 \
-                   -DNO_FP -Os -Werror -mips16
+                   -DNO_FP -Os -Werror
+#CFLAGS += -mips16
 LIBS            = -lm -lc
 
 TARGET          = picoc
