--- a/src/cmd/smlrc/Makefile
+++ b/src/cmd/smlrc/Makefile
@@ -5,6 +5,7 @@ CFLAGS          = -Os -Wall -DMIPS -DNO_ANNOTATIONS -DNO_PREPROCESSOR \
                   -DNO_PPACK -D_RETROBSD -D__SMALLER_C_SCHAR__ \
                   -D__SMALLER_C__ -D__SMALLER_C_32__ -DSTATIC \
                   -DNO_EXTRA_WARNS -DSYNTAX_STACK_MAX=3200
+#CFLAGS += -mips16
 
 # For cross compile
 #include $(TOPSRC)/cross.mk
@@ -33,4 +34,4 @@ clean:
 		rm -f *.o smlrc smlrc.dis smlrc.elf
 ###
 smlrc.o: smlrc.c fp.c cgmips.c
-		${CC} ${CFLAGS} -mips16 smlrc.c -c -o $@
+		${CC} ${CFLAGS} smlrc.c -c -o $@
