--- a/tools/diag/Makefile
+++ b/tools/diag/Makefile
@@ -55,7 +55,7 @@ DEFS            += -DLED_KERNEL_PORT=TRISE -DLED_KERNEL_PIN=2 -DLED_KERNEL_INVER
 DEFS            += -DLED_TTY_PORT=TRISE    -DLED_TTY_PIN=3    -DLED_TTY_INVERT
 
 DEPFLAGS	= -MT $@ -MD -MP -MF .deps/$*.dep
-CFLAGS		= -O $(DEFS) $(DEPFLAGS)
+CFLAGS		= -O $(DEFS) $(DEPFLAGS) -m32
 ASFLAGS		= $(DEFS) $(DEPFLAGS)
 
 CC		= $(GCCPREFIX)gcc -EL -g -mips32r2
