--- a/tools/virtualmips/Makefile
+++ b/tools/virtualmips/Makefile
@@ -15,8 +15,8 @@ CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DMAX32
 # UBW32 with UART console
 #CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DUBW32
 
-CC          = gcc -g
-CFLAGS		+= -Wall -Werror -MT $@ -MD -MP -MF .deps/$*.dep
+CC          = gcc -g -m32
+CFLAGS		+= -Wall -MT $@ -MD -MP -MF .deps/$*.dep 
 LIBS		= -lpthread
 
 CFLAGS      += $(shell pkg-config libelf --cflags)
