Rename directories for pic32 boards.

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -1,10 +1,7 @@
 
 # Programs that live in subdirectories, and have makefiles of their own.
 #
-SUBDIR		= baremetal duinomite duinomite-emega explorer16 \
-                  fubarino max32 maximite maximite-color mmb-mx7 \
-                  picadillo pinguino-micro sdxl snadpic starter-kit \
-                  ubw32 wf32
+SUBDIR		= explorer16 olimex
 
 default:
 
@@ -21,9 +18,3 @@ clean-all:
 
 reconfig:
 		-for i in $(SUBDIR); do ${MAKE} -C $$i reconfig; done
-
-configsys:
-		-for i in $(SUBDIR); do echo $$i; \
-                I=`echo $$i | awk '{print toupper($$0)}'`; \
-                if [ ! -f $$i/Config ]; then \
-                (cd $$i; ../../../tools/configsys/config $$I); fi; done
