--- a/src/games/boggle/Makefile
+++ b/src/games/boggle/Makefile
@@ -17,7 +17,7 @@ MANSRC          = boggle.6
 all:            boggle bogdict ${MAN}
 
 boggle:         ${OBJS}
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
