--- a/src/games/btlgammon/Makefile
+++ b/src/games/btlgammon/Makefile
@@ -10,7 +10,7 @@ OBJS    	= btlgammon.o
 all:            btlgammon
 
 btlgammon:      ${OBJS}
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
