--- a/src/games/hangman/Makefile
+++ b/src/games/hangman/Makefile
@@ -11,8 +11,8 @@ LIBS            = -lcurses -ltermcap -lc
 
 all:            hangman $(MAN)
 
-hangman:       $(OBJS)
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+hangman:        $(OBJS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
