--- a/src/games/mille/Makefile
+++ b/src/games/mille/Makefile
@@ -16,7 +16,7 @@ LIBS            = -lcurses -ltermcap -lc
 all:            mille $(MAN)
 
 mille:          $(OBJS)
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
