--- a/src/games/quiz/Makefile
+++ b/src/games/quiz/Makefile
@@ -13,7 +13,7 @@ MAN             = quiz.0
 all:            quiz $(MAN)
 
 quiz:           $(OBJS)
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
