--- a/src/games/robots/Makefile
+++ b/src/games/robots/Makefile
@@ -21,7 +21,7 @@ LIBS            = -lcurses -ltermcap -lc
 all:            robots $(MAN)
 
 robots:         $(OBJS)
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
