--- a/src/games/snake/Makefile
+++ b/src/games/snake/Makefile
@@ -19,13 +19,13 @@ LIBS            = -lm -ltermcap -lc
 all:            snake snscore $(MAN)
 
 snake:          $(OBJS)
-		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
 
 snscore:        snscore.o
-		$(CC) $(LDFLAGS) -o $@.elf snscore.o $(LIBS)
+		$(LD) $(LDFLAGS) -o $@.elf snscore.o $(LIBS)
 		$(OBJDUMP) -S $@.elf > $@.dis
 		$(SIZE) $@.elf
 		$(ELF2AOUT) $@.elf $@ && rm $@.elf
