Fix build for Olimex.

--- a/sys/pic32/Makefile.kconf
+++ b/sys/pic32/Makefile.kconf
@@ -16,6 +16,7 @@ LDFLAGS         = -nostdlib -T ../${LDSCRIPT}
 SIZE            = $(LLVMBIN)llvm-size
 OBJCOPY         = $(LLVMBIN)llvm-objcopy
 OBJDUMP         = $(LLVMBIN)llvm-objdump
+NM              = $(LLVMBIN)llvm-nm
 
 # sources are located via $S relative to the compilation directory
 S               = ../..
@@ -50,12 +51,13 @@ SYSTEM_LD       = -@echo ${LD} ${LDFLAGS} '$${SYSTEM_OBJ}' vers.o -o $@; \
 SYSTEM_LD_TAIL  = ${SIZE} $@; \
                   $(OBJCOPY) -O ihex $@ $(basename $@).hex; \
                   $(OBJCOPY) -O binary -R .boot -R .config $@ $(basename $@).bin; \
-                  $(OBJDUMP) -d -S $@ > $(basename $@).dis
+                  $(OBJDUMP) -d -S $@ > $(basename $@).dis; \
+                  $(NM) -n $@ > $(basename $@).nm
 
 %LOAD
 
 clean:
-	rm -rf .deps *.elf *.o *.map *.dis *.bin machine sys
+	rm -rf .deps *.elf *.o *.nm *.dis *.bin machine sys
 
 clean-all: clean
 	rm -f *.h *.hex ioconf.c swap*.c vers.c
