Create top level clang-config.mk: find clang version.

--- a/sys/pic32/Makefile.kconf
+++ b/sys/pic32/Makefile.kconf
@@ -3,7 +3,7 @@
 #
 # DEBUG is set to -g by kconfig if debugging is requested (kconfig -g).
 #
-include ../clang-config.mk
+include ../../../clang-config.mk
 
 AS              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 ${DEBUG}
 CC              =  -mabi=o32 -mfloat-abi=soft \
