--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -28,7 +28,7 @@ LDSCRIPT = "explorer16/baremetal.ld"
 #
 # DEBUG is set to -g by kconfig if debugging is requested (kconfig -g).
 #
-include ../clang-config.mk
+include ../../../clang-config.mk
 
 AS              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 ${DEBUG}
 CC              =  -mabi=o32 -mfloat-abi=soft \
