Remove unused tools.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,4 +1,4 @@
-SUBDIR		= elf2aout fsutil mkrd kconfig icache
+SUBDIR		= elf2aout fsutil kconfig
 
 all install depend: ${SUBDIR}
 		-for i in ${SUBDIR}; do ${MAKE} -C $$i ${MFLAGS} DESTDIR=${DESTDIR} $@; done
