--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -105,35 +105,45 @@ SYSTEM_OBJ      = startup.o ${OBJS} ioconf.o
 ifeq (devcfg.c,$(wildcard devcfg.c))
     SYSTEM_OBJ  += devcfg.o
 endif
-SYSTEM_DEP      = Makefile ioconf.c machine sys .deps ${SYSTEM_OBJ}
+SYSTEM_DEP      = Makefile ioconf.c | machine sys .deps
 SYSTEM_LD_HEAD  = sh ../newvers.sh > vers.c; ${CC} $(CFLAGS) -c vers.c; rm -f $@
 SYSTEM_LD       = -@echo ${LD} ${LDFLAGS} '$${SYSTEM_OBJ}' vers.o -o $@; \
                   ${LD} ${LDFLAGS} ${SYSTEM_OBJ} vers.o -o $@
 SYSTEM_LD_TAIL  = ${SIZE} $@; \
                   $(OBJCOPY) -O ihex $@ $(basename $@).hex; \
                   $(OBJCOPY) -O binary -R .boot -R .config $@ $(basename $@).bin; \
+				  $(OBJCOPY) -O binary --only-section .boot $@ boot.bin; \
                   $(OBJDUMP) -d -S $@ > $(basename $@).dis; \
                   $(NM) -n $@ > $(basename $@).nm
 
 unix: unix.elf
 
-unix.elf: ${SYSTEM_DEP} swapunix.o
+unix.elf: ${SYSTEM_DEP} ${SYSTEM_OBJ} swapunix.o
 	${SYSTEM_LD_HEAD}
 	${SYSTEM_LD} swapunix.o
 	${SYSTEM_LD_TAIL}
 
-swapunix.o: swapunix.c
+swapunix.o: swapunix.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
 all: unix
 
 clean:
-	rm -rf .deps *.elf *.o *.nm *.dis *.bin machine sys
+	rm -rf *.elf *.o *.nm *.dis *.bin
 
 clean-all: clean
-	rm -f *.h *.hex ioconf.c swap*.c vers.c
+	rm -f *.h *.hex ioconf.c swap*.c vers.c machine sys .deps
 
-reconfig ioconf.c: Config ../../../tools/kconfig/kconfig
+.PHONY: reconfig
+
+reconfig: ioconf.c
+
+swapunix.c: Config ../../../tools/kconfig/kconfig | sys machine
+	../../../tools/kconfig/kconfig Config
+	$(MAKE) clean
+	rm -f *.hex
+
+ioconf.c: Config ../../../tools/kconfig/kconfig | sys machine
 	../../../tools/kconfig/kconfig Config
 	$(MAKE) clean
 	rm -f *.hex
@@ -150,205 +160,205 @@ sys:
 .deps:
 	mkdir .deps
 
-startup.o: ../startup.S
+startup.o: ../startup.S ${SYSTEM_DEP}
 	${COMPILE_S}
 
-ioconf.o: ioconf.c
+ioconf.o: ioconf.c  ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exec_aout.o: $S/kernel/exec_aout.c
+devcfg.o: devcfg.c ${SYSTEM_DEP}
+
+exec_aout.o: $S/kernel/exec_aout.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exec_conf.o: $S/kernel/exec_conf.c
+exec_conf.o: $S/kernel/exec_conf.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exec_elf.o: $S/kernel/exec_elf.c
+exec_elf.o: $S/kernel/exec_elf.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exec_script.o: $S/kernel/exec_script.c
+exec_script.o: $S/kernel/exec_script.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exec_subr.o: $S/kernel/exec_subr.c
+exec_subr.o: $S/kernel/exec_subr.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-init_main.o: $S/kernel/init_main.c
+init_main.o: $S/kernel/init_main.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-init_sysent.o: $S/kernel/init_sysent.c
+init_sysent.o: $S/kernel/init_sysent.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_clock.o: $S/kernel/kern_clock.c
+kern_clock.o: $S/kernel/kern_clock.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_descrip.o: $S/kernel/kern_descrip.c
+kern_descrip.o: $S/kernel/kern_descrip.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_exec.o: $S/kernel/kern_exec.c
+kern_exec.o: $S/kernel/kern_exec.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_exit.o: $S/kernel/kern_exit.c
+kern_exit.o: $S/kernel/kern_exit.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_fork.o: $S/kernel/kern_fork.c
+kern_fork.o: $S/kernel/kern_fork.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_mman.o: $S/kernel/kern_mman.c
+kern_mman.o: $S/kernel/kern_mman.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_proc.o: $S/kernel/kern_proc.c
+kern_proc.o: $S/kernel/kern_proc.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_prot.o: $S/kernel/kern_prot.c
+kern_prot.o: $S/kernel/kern_prot.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_prot2.o: $S/kernel/kern_prot2.c
+kern_prot2.o: $S/kernel/kern_prot2.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_resource.o: $S/kernel/kern_resource.c
+kern_resource.o: $S/kernel/kern_resource.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_sig.o: $S/kernel/kern_sig.c
+kern_sig.o: $S/kernel/kern_sig.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_sig2.o: $S/kernel/kern_sig2.c
+kern_sig2.o: $S/kernel/kern_sig2.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_subr.o: $S/kernel/kern_subr.c
+kern_subr.o: $S/kernel/kern_subr.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_synch.o: $S/kernel/kern_synch.c
+kern_synch.o: $S/kernel/kern_synch.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_sysctl.o: $S/kernel/kern_sysctl.c
+kern_sysctl.o: $S/kernel/kern_sysctl.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-kern_time.o: $S/kernel/kern_time.c
+kern_time.o: $S/kernel/kern_time.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-subr_prf.o: $S/kernel/subr_prf.c
+subr_prf.o: $S/kernel/subr_prf.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-subr_rmap.o: $S/kernel/subr_rmap.c
+subr_rmap.o: $S/kernel/subr_rmap.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sys_generic.o: $S/kernel/sys_generic.c
+sys_generic.o: $S/kernel/sys_generic.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sys_inode.o: $S/kernel/sys_inode.c
+sys_inode.o: $S/kernel/sys_inode.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sys_pipe.o: $S/kernel/sys_pipe.c
+sys_pipe.o: $S/kernel/sys_pipe.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sys_process.o: $S/kernel/sys_process.c
+sys_process.o: $S/kernel/sys_process.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-syscalls.o: $S/kernel/syscalls.c
+syscalls.o: $S/kernel/syscalls.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-tty.o: $S/kernel/tty.c
+tty.o: $S/kernel/tty.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-tty_subr.o: $S/kernel/tty_subr.c
+tty_subr.o: $S/kernel/tty_subr.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-tty_tty.o: $S/kernel/tty_tty.c
+tty_tty.o: $S/kernel/tty_tty.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_alloc.o: $S/kernel/ufs_alloc.c
+ufs_alloc.o: $S/kernel/ufs_alloc.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_bio.o: $S/kernel/ufs_bio.c
+ufs_bio.o: $S/kernel/ufs_bio.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_bmap.o: $S/kernel/ufs_bmap.c
+ufs_bmap.o: $S/kernel/ufs_bmap.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_dsort.o: $S/kernel/ufs_dsort.c
+ufs_dsort.o: $S/kernel/ufs_dsort.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_fio.o: $S/kernel/ufs_fio.c
+ufs_fio.o: $S/kernel/ufs_fio.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_inode.o: $S/kernel/ufs_inode.c
+ufs_inode.o: $S/kernel/ufs_inode.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_mount.o: $S/kernel/ufs_mount.c
+ufs_mount.o: $S/kernel/ufs_mount.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_namei.o: $S/kernel/ufs_namei.c
+ufs_namei.o: $S/kernel/ufs_namei.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_subr.o: $S/kernel/ufs_subr.c
+ufs_subr.o: $S/kernel/ufs_subr.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_syscalls.o: $S/kernel/ufs_syscalls.c
+ufs_syscalls.o: $S/kernel/ufs_syscalls.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-ufs_syscalls2.o: $S/kernel/ufs_syscalls2.c
+ufs_syscalls2.o: $S/kernel/ufs_syscalls2.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-vfs_vnops.o: $S/kernel/vfs_vnops.c
+vfs_vnops.o: $S/kernel/vfs_vnops.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-vm_sched.o: $S/kernel/vm_sched.c
+vm_sched.o: $S/kernel/vm_sched.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-vm_swap.o: $S/kernel/vm_swap.c
+vm_swap.o: $S/kernel/vm_swap.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-vm_swp.o: $S/kernel/vm_swp.c
+vm_swp.o: $S/kernel/vm_swp.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-clock.o: $S/pic32/clock.c
+clock.o: $S/pic32/clock.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-cons.o: $S/pic32/cons.c
+cons.o: $S/pic32/cons.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-devsw.o: $S/pic32/devsw.c
+devsw.o: $S/pic32/devsw.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-exception.o: $S/pic32/exception.c
+exception.o: $S/pic32/exception.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-machdep.o: $S/pic32/machdep.c
+machdep.o: $S/pic32/machdep.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-mem.o: $S/pic32/mem.c
+mem.o: $S/pic32/mem.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-signal.o: $S/pic32/signal.c
+signal.o: $S/pic32/signal.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-swap.o: $S/pic32/swap.c
+swap.o: $S/pic32/swap.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sysctl.o: $S/pic32/sysctl.c
+sysctl.o: $S/pic32/sysctl.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-adc.o: $S/pic32/adc.c
+adc.o: $S/pic32/adc.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-gpio.o: $S/pic32/gpio.c
+gpio.o: $S/pic32/gpio.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-pwm.o: $S/pic32/pwm.c
+pwm.o: $S/pic32/pwm.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-sd.o: $S/pic32/sd.c
+sd.o: $S/pic32/sd.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-spi.o: $S/pic32/spi.c
+spi.o: $S/pic32/spi.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-spi_bus.o: $S/pic32/spi_bus.c
+spi_bus.o: $S/pic32/spi_bus.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
-uart.o: $S/pic32/uart.c
+uart.o: $S/pic32/uart.c ${SYSTEM_DEP}
 	${COMPILE_C}
 
 
-ifeq (.deps, $(wildcard .deps))
 -include .deps/*.dep
-endif
