--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,6 +3,8 @@ SUBDIR		= elf2aout fsutil kconfig
 all install depend: ${SUBDIR}
 		-for i in ${SUBDIR}; do ${MAKE} -C $$i ${MFLAGS} DESTDIR=${DESTDIR} $@; done
 
+.PHONY: all
+
 clean:
 		rm -f *~
 		for i in ${SUBDIR}; do ${MAKE} -C $$i ${MFLAGS} clean; done
