Have byacc create c files directly without using temp. Prevents conflicts between bc, egrep, and expr

--- a/src/cmd/Makefile
+++ b/src/cmd/Makefile
@@ -83,8 +83,7 @@ FRC:
 
 # bc egrep expr
 %.c: %.y
-		$(YACC) $(YFLAGS) $<
-		-/bin/mv y.tab.c $@
+		$(YACC) $(YFLAGS) -o $@ $<
 
 $(SCRIPT):
 		install -c $@.sh $@
