--- a/sys/pic32/Makefile.kconf
+++ b/sys/pic32/Makefile.kconf
@@ -11,7 +11,7 @@ CC              =  -mabi=o32 -mfloat-abi=soft \
 CC              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 -mabi=o32 -mfloat-abi=soft \
                   ${DEBUG} -nostdinc -fno-builtin -Werror -Wall
 CPP             = $(LLVMBIN)clang-cpp
-LD              = $(LLVMBIN)ld.lld -m elf32ltsmip
+LD              = ld.lld -m elf32ltsmip
 LDFLAGS         = -nostdlib -T ../${LDSCRIPT}
 SIZE            = $(LLVMBIN)llvm-size
 OBJCOPY         = $(LLVMBIN)llvm-objcopy
