--- a/sys/pic32/olimex/Makefile
+++ b/sys/pic32/olimex/Makefile
@@ -34,7 +34,7 @@ CC              =  -mabi=o32 -mfloat-abi=soft \
 CC              = $(LLVMBIN)clang -target mipsel -mcpu=mips32r2 -mabi=o32 -mfloat-abi=soft \
                   ${DEBUG} -nostdinc -fno-builtin -Werror -Wall
 CPP             = $(LLVMBIN)clang-cpp
-LD              = $(LLVMBIN)ld.lld -m elf32ltsmip
+LD              = ld.lld -m elf32ltsmip
 LDFLAGS         = -nostdlib -T ../${LDSCRIPT}
 SIZE            = $(LLVMBIN)llvm-size
 OBJCOPY         = $(LLVMBIN)llvm-objcopy
@@ -66,7 +66,7 @@ OBJS = exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o \
 	vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o clock.o cons.o devsw.o \
 	exception.o machdep.o mem.o signal.o swap.o sysctl.o adc.o \
 	gpio.o pwm.o sd.o spi.o spi_bus.o uart.o usb_device.o \
-	usb_function_cdc.o usb_uart.o 
+	usb_function_cdc.o usb_uart.o
 
 CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/exec_script.c $S/kernel/exec_subr.c \
@@ -94,7 +94,7 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/pic32/sysctl.c $S/pic32/adc.c $S/pic32/gpio.c $S/pic32/pwm.c \
 	$S/pic32/sd.c $S/pic32/spi.c $S/pic32/spi_bus.c $S/pic32/uart.c \
 	$S/pic32/usb_device.c $S/pic32/usb_function_cdc.c \
-	$S/pic32/usb_uart.c swapunix.c 
+	$S/pic32/usb_uart.c swapunix.c
 
 # load lines for config "xxx" will be emitted as:
 # xxx: ${SYSTEM_DEP} swapxxx.o
